# embedding-search

./: .gitignore  pyproject.toml
embedding-api/: 00-create-bucket-in-single-region.sh  01-gen-embedding.sh  02-cp-storage.sh  03-create_index.sh  create_index.sh  main.py
semantic-search/: 00-create-endpoint.sh  01-deploy-index.sh  02-extract-public-endpoint-url.sh  main.py
