[tool.poetry]
name = "embedding-search"
version = "0.1.0"
description = ""
authors = ["shin5ok <shin5ok@55mp.com>"]

[tool.poetry.dependencies]
python = "^3.10"
vertexai = "^0.0.1"
click = "^8.1.4"
google-cloud-aiplatform = {git = "https://github.com/googleapis/python-aiplatform.git", rev = "main"}
Faker = "^19.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
